# TableApp

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
tables/: models.py  serializers.py  services.py  urls.py  views.py
tables/migrations/: 0001_initial.py
tables/tests/: test_table.py
tests/: test_user_setup.py
